Update README to remove Windows command examples
Removed Windows-specific Java command examples for clarity.