@@ -65,33 +65,27 @@ For example: `java --enable-native-access=ALL-UNNAMED -jar casciian-full.jar`
 
   * `java -jar casciian-full.jar` .  This will use
     System.in/out with Xterm-like sequences.
-    On Windows: `java --enable-native-access=ALL-UNNAMED -jar casciian-full.jar`
 
   * `java -cp casciian-full.jar demo.Demo2 PORT` (where PORT is a
     number to run the TCP daemon on).  This will use the Xterm backend
     on a telnet server that will update with screen size changes.
-    On Windows: `java --enable-native-access=ALL-UNNAMED -cp casciian-full.jar demo.Demo2 PORT`
 
   * `java -cp casciian-full.jar demo.Demo3` .  This will use
     System.in/out with Xterm-like sequences.  One can see in the code
     how to pass a different InputReader and OutputReader to
     TApplication, permitting a different encoding than UTF-8; in this
     case, code page 437.
-    On Windows: `java --enable-native-access=ALL-UNNAMED -cp casciian-full.jar demo.Demo3`
 
   * `java -cp casciian-full.jar demo.Demo4` .  This demonstrates
     hidden windows and a custom TDesktop.
-    On Windows: `java --enable-native-access=ALL-UNNAMED -cp casciian-full.jar demo.Demo4`
 
   * `java -cp casciian-full.jar demo.Demo7` .  This demonstrates the
     BoxLayoutManager, achieving a similar result as the
     javax.swing.BoxLayout apidocs example.
-    On Windows: `java --enable-native-access=ALL-UNNAMED -cp casciian-full.jar demo.Demo7`
 
   * `java -cp casciian-full.jar demo.Demo8 PORT` (where PORT is a
     number to run the TCP daemon on).  This will use the Xterm backend
     on a telnet server to share one screen to many terminals.
-    On Windows: `java --enable-native-access=ALL-UNNAMED -cp casciian-full.jar demo.Demo8 PORT`
 
 Editing the Wiki
 ----------------
